--- a/index.html
+++ b/index.html
@@ -1,72 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>My Portfolio W3 Schools</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="portfolio.css">
+    <meta charset="UTF-8">
+    <title>Portfolio test</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<nav class="navbar navbar-default navbar-static-top">
-	  <div class="container-fluid">
-	  	<div class="nav navbar-nav">
-	  		<a class="navbar-brand" href="#">Me</a>
-	  	</div>
-	    
-	    <ul class="nav navbar-nav navbar-right">
-	    	<li><a href="#">About</a></li>
-	    	<li><a href="#">What</a></li>
-	    	<li><a href="#">Where</a></li>
-	    </ul>
-	  </div> 
-	</nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="jumbotron">
+                <nav class="navbar navbar-default navbar-fixed-top">
+                    <div class="container-fluid">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a class="active" href="#">Page 1</a></li>
+                            <li><a href="#">Page 2</a></li>
+                            <li><a href="#">Page 3</a></li>
+                        </ul>
+                    </div>
+                </nav>
 
-	<div class="container-fluid">
-		<div class="row me">
-			<h2>Who Am I?</h2>
-			<div class="row">
-				<div class="col-sm-4 col-sm-offset-4">
-					<img class="img-thumbnail" src="img/eagle-face.jpg" alt="eagle">
-				</div>
-			</div>
-			<h2>I'm an adventurer.</h2>
-		</div> <!--End of row-->
-			
+                <h4>Hello our names are</h4>
+                <h1>Walter &amp; Kealy</h1>
+                <h4>Future Web Developers</h4>
+            </div>
+        </div>
+    </div>
 
+    <div class="section container">
+        <div class="row spacing">
+            <h2>My Portfolio</h2>
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+        </div>
+        <!--End of row 1-->
+        <div class="row spacing">
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+            <div class="col-sm-4">
+                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+            </div>
+        </div>
+        <!--End of row 2-->
+    </div>
+    <!--End of section Portfolio-->
 
-		<div class="row whatAmI">
-			<h2>What am I</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis  empora doloremque magniet iste sit amet, consectetur adipisicing voluptate, explicabo neque animi laudantium tempora doloremque magni officiis.</p>
-			<div class="row">
-				<div class="col-sm-2 col-sm-offset-5">
-					<button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Search</button>
+    <div class="section social-media bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-2">
+                    <i class="fa fa-futbol-o" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-2">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-2">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-2">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-2">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </div>
+                <div class="col-xs-2">
+                    <i class="fa fa-tumblr" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End of section social-media-->
 
-				</div>
-			</div>
-		</div> <!--End of row-->
-
-		<div class="images">
-			<h2>Where to Find me</h2>
-			<div class="row">
-				<div class="col-lg-4">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quasi doloremque minus veniam</p>
-				<img class="img-thumbnail" src="img/newp_seagull.jpg" alt="">	
-			</div>
-			<div class="col-lg-4">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quasi doloremque minus veniam</p>
-				<img class="img-thumbnail" src="img/newp_seagull.jpg" alt="">
-			</div>
-			<div class="col-lg-4">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quasi doloremque minus veniam</p>
-				<img class="img-thumbnail" src="img/newp_seagull.jpg" alt="">	
-			</div>
-			</div>
-		</div>
-
-		<div class="row panel-footer">
-			<p class="panel-body">Bootstrap theme made by Walter A</p>
-		</div>
-	</div> <!--End of container-fluid-->
+    <div class="section footer bg-black">
+        <div class="container">
+            <div class="row center">
+                <diiv class="col-sm-4">
+                    <h4>Web Developer</h4>
+                </diiv>
+                <diiv class="col-sm-4">
+                    <p>Living in New Jersey and Vancouver</p>
+                </diiv>
+                <div class="col-sm-4">
+                    <p>@emailus.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
