--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--End of section Portfolio-->
 
     <div class="section social-media bg-gray">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-2">
                     <i class="fa fa-futbol-o" aria-hidden="true"></i>
