Overlay on image
Added a linear gradient ot jumbotron image

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+            <div class="overlay"></div>
             <div class="jumbotron">
-                <nav class="navbar navbar-default navbar-fixed-top">
-                    <div class="container-fluid">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a class="active" href="#">Page 1</a></li>
-                            <li><a href="#">Page 2</a></li>
-                            <li><a href="#">Page 3</a></li>
-                        </ul>
-                    </div>
-                </nav>
-
+                
+                    <nav class="navbar navbar-default navbar-fixed-top">
+                        <div class="container-fluid">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a class="active" href="#">Page 1</a></li>
+                                <li><a href="#">Page 2</a></li>
+                                <li><a href="#">Page 3</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                
                 <h4>Hello our names are</h4>
                 <h1>Walter &amp; Kealy</h1>
                 <h4>Future Web Developers</h4>
@@ -61,7 +63,7 @@
     <!--End of section Portfolio-->
 
     <div class="section social-media bg-gray">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-2">
                     <i class="fa fa-futbol-o" aria-hidden="true"></i>
