Coming soon placeholder
Added new images as placeholders for Projects

--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
         </div>
     </div>
 
-    <div class="section container">
+    <div class="section container center">
         <div class="row spacing">
             <h2>My Portfolio</h2>
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
         </div>
         <!--End of row 1-->
         <div class="row spacing">
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
             <div class="col-sm-4">
-                <a href="#"><img src="img/rayi-christian-wicaksono-366.jpg" class="img-responsive" alt=""></a>
+                <a href="#"><img src="img/timthumb.jpg" class="img-responsive" alt=""></a>
             </div>
         </div>
         <!--End of row 2-->
