--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,9 +20,9 @@
                     <nav class="navbar navbar-default navbar-fixed-top">
                         <div class="container-fluid">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a class="active" href="#">Page 1</a></li>
-                                <li><a href="#">Page 2</a></li>
-                                <li><a href="#">Page 3</a></li>
+                                <li><a class="active" href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Our Work</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -62,26 +63,26 @@
     </div>
     <!--End of section Portfolio-->
 
-    <div class="section social-media bg-gray">
+    <div class="section social-media center bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-xs-2">
-                    <i class="fa fa-futbol-o" aria-hidden="true"></i>
+                    <i class="fa fa-futbol-o fa-3x" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-2">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-2">
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-2">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-2">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-2">
-                    <i class="fa fa-tumblr" aria-hidden="true"></i>
+                    <i class="fa fa-tumblr fa-3x" aria-hidden="true"></i>
                 </div>
             </div>
         </div>
@@ -92,7 +93,7 @@
         <div class="container">
             <div class="row center">
                 <diiv class="col-sm-4">
-                    <h4>Web Developer</h4>
+                    <p><strong>WEB DEVELOPERS</strong></p>
                 </diiv>
                 <diiv class="col-sm-4">
                     <p>Living in New Jersey and Vancouver</p>
