--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <div class="container-fluid">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a class="active" href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Our Work</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="#portfolio">Our Work</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="section container center">
+    <div class="section container center" id="portfolio">
         <div class="row spacing">
             <h2>My Portfolio</h2>
             <div class="col-sm-4">
